@@ -20,7 +20,7 @@ $plugin_info_function		= "Plugin_CampaignhistoryInfo";
 // Public info function
 function Plugin_CampaignhistoryInfo()
 {
-	global $strCampaignHistory, $strCampaign, $strPluginCampaign, $strDelimiter;
+	global $strCampaignHistory, $strCampaign, $strPluginCampaign, $strDelimiter, $strUseQuotes;
 	
 	$plugininfo = array (
 		"plugin-name"			=> $strCampaignHistory,
@@ -33,11 +33,12 @@ function Plugin_CampaignhistoryInfo()
 			"campaignid"			=> array (
 				"title"					=> $strCampaign,
 				"type"					=> "campaignid-dropdown" ),
-			"delimiter"		=> array (
+			"delimiter"				=> array (
 				"title"					=> $strDelimiter,
-				"type"					=> "edit",
-				"size"					=> 1,
-				"default"				=> "," ) )
+				"type"					=> "delimiter" ),
+			"quotes"				=> array (
+				"title"					=> $strUseQuotes,
+				"type"					=> "quotes" ) )
 	);
 	
 	return ($plugininfo);
@@ -49,10 +50,15 @@ function Plugin_CampaignhistoryInfo()
 /* Private plugin function                               */
 /*********************************************************/
 
-function Plugin_CampaignhistoryExecute($campaignid, $delimiter=",")
+function Plugin_CampaignhistoryExecute($campaignid, $delimiter="t", $quotes="")
 {
 	global $phpAds_config, $date_format;
 	global $strCampaign, $strTotal, $strDay, $strViews, $strClicks, $strCTRShort;
+	
+	// Expand delimiter and quotes
+	if ($delimiter == 't')	$delimiter = "\t";
+	if ($quotes == '1')		$quotes = "'";
+	if ($quotes == '2')		$quotes = '"';
 	
 	header ("Content-type: application/csv\nContent-Disposition: \"inline; filename=campaignhistory.csv\"");
 	
@@ -136,8 +142,9 @@ function Plugin_CampaignhistoryExecute($campaignid, $delimiter=",")
 		}
 	}
 	
-	echo $strCampaign.": ".strip_tags(phpAds_getClientName ($campaignid))."\n\n";
-	echo $strDay.$delimiter.$strViews.$delimiter.$strClicks.$delimiter.$strCTRShort."\n";
+	echo $quotes.$strCampaign.": ".strip_tags(phpAds_getClientName ($campaignid)).$quotes."\n\n";
+	echo $quotes.$strDay.$quotes.$delimiter.$quotes.$strViews.$quotes.$delimiter;
+	echo $quotes.$strClicks.$quotes.$delimiter.$quotes.$strCTRShort.$quotes."\n";
 	
 	$totalclicks = 0;
 	$totalviews = 0;
@@ -148,10 +155,10 @@ function Plugin_CampaignhistoryExecute($campaignid, $delimiter=",")
 		{
 			$row = array();
 			
-			$row[] = $key;
-			$row[] = $stats[$key]['views'];
-			$row[] = $stats[$key]['clicks'];
-			$row[] = phpAds_buildCTR ($stats[$key]['views'], $stats[$key]['clicks']);
+			$row[] = $quotes.$key.$quotes;
+			$row[] = $quotes.$stats[$key]['views'].$quotes;
+			$row[] = $quotes.$stats[$key]['clicks'].$quotes;
+			$row[] = $quotes.phpAds_buildCTR ($stats[$key]['views'], $stats[$key]['clicks']).$quotes;
 			
 			echo implode ($delimiter, $row)."\n";
 			
@@ -161,7 +168,8 @@ function Plugin_CampaignhistoryExecute($campaignid, $delimiter=",")
 	}
 	
 	echo "\n";
-	echo $strTotal.$delimiter.$totalviews.$delimiter.$totalclicks.$delimiter.phpAds_buildCTR ($totalviews, $totalclicks)."\n";
+	echo $quotes.$strTotal.$quotes.$delimiter.$quotes.$totalviews.$quotes.$delimiter;
+	echo $quotes.$totalclicks.$quotes.$delimiter.$quotes.phpAds_buildCTR ($totalviews, $totalclicks).$quotes."\n";
 }
 
 ?>
