@@ -5,6 +5,7 @@ CVS
 			  - 2003-04-13:  Added support for paths in direct selection query string  (Niels)
  			  - 2003-04-13:  Beacon image is now enclosed in a hidden layer to prevent unneeded linewraps after tables and other html tags  (Niels)
 			  - 2003-04-16:  Added transparent background and no-border support to simple interstitial layerstyle  (Matteo)
+			  - 2003-05-08:  Added ability to use tabs and place quotes around fields in csv report files  (Niels)
 
 			+ Misc bugfixes
 			  - 2003-04-13:  Logging of geodata for Adclicks didn't work properly  (Niels)
